src/app/all-component/public/login/login.component.css
.ng-star-inserted{
  width: 100%;
}

mat-card{
  background-color: #0c1228;
  margin: 0 auto;
  width: 40%;
  opacity: 90%;
  height: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
}
mat-card-title{
  color: white;
  padding-bottom: 20px;
}
mat-label{
  color: #0c1228;
}
button{
  width: 48%;
  display: inline-block;
}
body{
  padding-top: 130px;
  background-image: url(../home/assets/images/choosing-bg.jpg);
}

